--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <groupId>org.wildfly.security</groupId>
     <artifactId>wildfly-elytron</artifactId>
-    <version>1.1.0.CR4-SNAPSHOT</version>
+    <version>1.1.0.CR4</version>
 
     <name>WildFly Elytron</name>
     <description>WildFly Security SPIs</description>
